--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </head>
 <body>
 
-    <h1>🍯 Die große Zutaten-Jagd</h1>
+    <h1>🍯 Die Jagd nach der geheimen Zutat</h1>
     
     <div class="intro-box">
         <h2 style="font-size: 1.1em; margin: 0; line-height: 1.4;">
