--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </head>
 <body>
 
-    <h1>🌲 Die Jagd nach der geheimen Zutat</h1>
+    <h1>🌲 Anna, Julia und Martin, auf der Jagd nach der geheimen Zutat</h1>
     
     <div class="intro-box">
         <h2 style="font-size: 1.1em; margin: 0; line-height: 1.4; color: #2ecc71;">
