Update hint text in intro section
Expanded the hint text to include details about the secret ingredient's use in Christmas cookies.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     
     <div class="intro-box">
         <h2 style="font-size: 1.1em; margin: 0; line-height: 1.4; color: #2ecc71;">
-            Sammle an allen Stationen die Hinweise, um die geheime Zutat zu finden.
+            Sammle an allen Stationen die Hinweise, um die geheime Zutat zu finden, die in vielen leckeren Weihnachtsplätzchen enthalten ist.
         </h2>
     </div>
 
